--- a/auth-service/requirements.txt
+++ b/auth-service/requirements.txt
@@ -1,5 +1,5 @@
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
+gunicorn==21.2.0
 pydantic[email]==2.5.0
 pydantic-settings==2.1.0
 python-jose[cryptography]==3.3.0
