--- a/cart-service/requirements.txt
+++ b/cart-service/requirements.txt
@@ -1,7 +1,9 @@
 fastapi==0.104.1
 uvicorn[standard]==0.23.2
-pymongo==4.5.0
+pymongo==4.6.0
 python-dotenv==1.0.0
 pyjwt==2.8.0
 httpx==0.25.0
-gunicorn==21.2.0  # Required for production server
+gunicorn==21.2.0
+pydantic==2.5.0
+pydantic-settings==2.1.0
