--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,19 @@ services:
       - mongo-data:/data/db
       - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USER}
+      MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
       MONGO_INITDB_DATABASE: ecommerce
+    ports:
+      - "27017:27017"
     networks:
       - ecommerce-net
     healthcheck:
-      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
+      test: mongosh --eval 'db.runCommand("ping").ok' mongodb://root:${MONGO_ROOT_PASSWORD}@localhost:27017/admin?authSource=admin
       interval: 10s
       timeout: 5s
       retries: 5
+      start_period: 30s
 
   auth-service:
     build: ./auth-service
@@ -28,7 +31,7 @@ services:
       mongo:
         condition: service_healthy
     environment:
-      MONGO_URL: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongo:27017/ecommerce?authSource=admin
+      MONGO_URL: mongodb://root:${MONGO_ROOT_PASSWORD}@mongo:27017/ecommerce?authSource=admin
       JWT_SECRET: ${JWT_SECRET}
       JWT_ALGORITHM: HS512
       JWT_EXPIRATION_HOURS: 24
@@ -47,7 +50,6 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.auth.rule=PathPrefix(`/api/auth`)"
       - "traefik.http.services.auth.loadbalancer.server.port=8000"
-
   product-service:
     build: ./product-service
     container_name: product-service
@@ -56,7 +58,8 @@ services:
       mongo:
         condition: service_healthy
     environment:
-      MONGO_URL: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongo:27017/ecommerce?authSource=admin
+      MONGO_URL: mongodb://ecomm:securePassword123@mongo:27017/ecommerce?authSource=ecommerce
+      PORT: 8000
     networks:
       - ecommerce-net
     healthcheck:
@@ -68,19 +71,21 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.products.rule=PathPrefix(`/api/products`)"
       - "traefik.http.services.products.loadbalancer.server.port=8000"
-
   cart-service:
     build: ./cart-service
     container_name: cart-service
     restart: always
     depends_on:
-      - mongo
-      - product-service
+      mongo:
+        condition: service_healthy
+      product-service:
+        condition: service_healthy
     environment:
-      MONGO_URL: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongo:27017/ecommerce?authSource=admin
+      MONGO_URL: mongodb://ecomm:securePassword123@mongo:27017/ecommerce?authSource=ecommerce
       JWT_SECRET: ${JWT_SECRET}
       JWT_ALGORITHM: HS512
-      PRODUCT_SERVICE_URL: http://product-service:8000
+      PRODUCT_SERVICE_URL: http://product-service:8000/api
+      PORT: 8000
     networks:
       - ecommerce-net
     healthcheck:
@@ -98,15 +103,18 @@ services:
     container_name: payment-service
     restart: always
     depends_on:
-      - mongo
-      - cart-service
+      mongo:
+        condition: service_healthy
+      cart-service:
+        condition: service_healthy
     environment:
       MONGO_URL: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongo:27017/ecommerce?authSource=admin
       JWT_SECRET: ${JWT_SECRET}
       JWT_ALGORITHM: HS512
       RAZORPAY_KEY_ID: ${RAZORPAY_KEY_ID}
       RAZORPAY_KEY_SECRET: ${RAZORPAY_KEY_SECRET}
-      CART_SERVICE_URL: http://cart-service:8000
+      CART_SERVICE_URL: http://cart-service:8000/api
+      PORT: 8000
     networks:
       - ecommerce-net
     healthcheck:
@@ -124,13 +132,17 @@ services:
     container_name: order-service
     restart: always
     depends_on:
-      - mongo
-      - product-service
+      mongo:
+        condition: service_healthy
+      product-service:
+        condition: service_healthy
     environment:
       MONGO_URL: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongo:27017/ecommerce?authSource=admin
       JWT_SECRET: ${JWT_SECRET}
       JWT_ALGORITHM: HS512
-      PRODUCT_SERVICE_URL: http://product-service:8000
+      PRODUCT_SERVICE_URL: http://product-service:8000/api
+      PAYMENT_SERVICE_URL: http://payment-service:8000/api
+      PORT: 8000
     networks:
       - ecommerce-net
     healthcheck:
