--- a/cart-service/Dockerfile
+++ b/cart-service/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.10-slim-buster
 
 # Set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
-ENV GUNICORN_CMD_ARGS="--workers ${GUNICORN_WORKERS:-4} --worker-class uvicorn.workers.UvicornWorker --timeout ${GUNICORN_TIMEOUT:-30} --bind 0.0.0.0:8000"
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+ENV GUNICORN_CMD_ARGS="--workers 4 --worker-class uvicorn.workers.UvicornWorker --timeout 30 --bind 0.0.0.0:8000 --log-level debug"
 
 # Install system dependencies
 RUN apt-get update && \
@@ -24,9 +24,9 @@ COPY . .
 # Expose port
 EXPOSE 8000
 
-# Health check
+# Health check (adjust `/api/health` if your app is not under `/api`)
 HEALTHCHECK --interval=30s --timeout=10s --retries=3 \
-    CMD curl -f http://localhost:8000/api/health || exit 1
+    CMD curl -f http://localhost:8000/docs || exit 1
 
-# Run application with Gunicorn
+# Start the app using Gunicorn with Uvicorn workers
 CMD ["gunicorn", "app.main:app"]
