--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .env*
 .venv
 mongo-data
+init-mongo.js
 # Exclude node_modules in e-commerce-frontend
 e-commerce-frontend/node_modules
 e-commerce-frontend/.next
