updated docker-build image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -179,21 +179,23 @@ services:
       - "traefik.http.routers.admin.rule=PathPrefix(`/api/admin`)"
       - "traefik.http.services.admin.loadbalancer.server.port=8000"
 
-  # frontend:
-  #   build: ./frontend
-  #   container_name: frontend
-  #   restart: always
-  #   ports:
-  #     - "3000:3000"
-  #   networks:
-  #     - ecommerce-net
-  #   depends_on:
-  #     - auth-service
-  #     - product-service
-  #     - cart-service
-  #     - payment-service
-  #     - order-service
-  #     - admin-service
+  frontend:
+    build: ./e-commerce-frontend
+    container_name: frontend
+    restart: always
+    ports:
+      - "3000:3000"
+    networks:
+      - ecommerce-net
+    depends_on:
+      - auth-service
+      - product-service
+      - cart-service
+      - payment-service
+      - order-service
+      - admin-service
+    env_file:
+      - .env
 
   reverse-proxy:
     image: traefik:v2.5
