update docker file for frontend

--- a/e-commerce-frontend/Dockerfile
+++ b/e-commerce-frontend/Dockerfile
@@ -1,24 +1,39 @@
-# ---- Build Stage ----
+# Step 1: Build the application
 FROM node:18-alpine AS builder
+
+# Set working directory
 WORKDIR /app
+
+# Install dependencies
 COPY package.json package-lock.json ./
-RUN npm ci --prefer-offline --no-audit
+RUN npm ci
+
+# Copy the rest of the app
 COPY . .
+
+# Build the Next.js app
 RUN npm run build
 
-# ---- Production Stage ----
+# Step 2: Run the application with a minimal image
 FROM node:18-alpine AS runner
+
+# Set working directory
 WORKDIR /app
-ENV NODE_ENV=production
-# Only copy necessary files for running the app
+
+# Install only production dependencies
 COPY --from=builder /app/package.json ./
+COPY --from=builder /app/node_modules ./node_modules
+
+# Copy built app
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/public ./public
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/next.config.js ./
-COPY --from=builder /app/tsconfig.json ./
-COPY --from=builder /app/src ./src
 
+# Set environment variables
+ENV NODE_ENV production
+ENV PORT 3000
 
+# Expose port
 EXPOSE 3000
-CMD ["npm", "start"] 
+
+# Start the app
+CMD ["npm", "start"]
