Fix port binding issues for Render deployment - use uvicorn directly instead of gunicorn

--- a/cart-service/Dockerfile
+++ b/cart-service/Dockerfile
@@ -3,7 +3,6 @@ FROM python:3.10-slim-buster
 # Set environment variables
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
-ENV GUNICORN_CMD_ARGS="--workers 4 --worker-class uvicorn.workers.UvicornWorker --timeout 30 --bind 0.0.0.0:8000 --log-level debug"
 
 # Install system dependencies
 RUN apt-get update && \
@@ -22,11 +21,11 @@ RUN pip install --no-cache-dir --upgrade pip && \
 COPY . .
 
 # Expose port
-EXPOSE 8000
+EXPOSE ${PORT:-8000}
 
 # Health check (adjust `/api/health` if your app is not under `/api`)
 HEALTHCHECK --interval=30s --timeout=10s --retries=3 \
-    CMD curl -f http://localhost:8000/docs || exit 1
+    CMD curl -f http://localhost:${PORT:-8000}/api/health || exit 1
 
-# Start the app using Gunicorn with Uvicorn workers
-CMD ["gunicorn", "app.main:app"]
+# Start the app using uvicorn directly
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "${PORT:-8000}"]
