--- a/order-service/Dockerfile
+++ b/order-service/Dockerfile
@@ -21,11 +21,11 @@ RUN pip install --no-cache-dir --upgrade pip && \
 COPY . .
 
 # Expose port
-EXPOSE ${PORT:-8000}
+EXPOSE 8000
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --retries=3 \
-    CMD curl -f http://localhost:${PORT:-8000}/api/health || exit 1
+    CMD curl -f http://localhost:8000/api/health || exit 1
 
-# Run application with uvicorn directly
-CMD uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}
+# Run application with uvicorn
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
