--- a/cart-service/Dockerfile
+++ b/cart-service/Dockerfile
@@ -21,11 +21,11 @@ RUN pip install --no-cache-dir --upgrade pip && \
 COPY . .
 
 # Expose port
-EXPOSE 8000
+EXPOSE $PORT
 
 # Health check (adjust `/api/health` if your app is not under `/api`)
 HEALTHCHECK --interval=30s --timeout=10s --retries=3 \
-    CMD curl -f http://localhost:8000/api/health || exit 1
+    CMD curl -f http://localhost:$PORT/api/health || exit 1
 
 # Start the app using uvicorn
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD uvicorn app.main:app --host 0.0.0.0 --port $PORT
