fixed service urls

--- a/e-commerce-frontend/.env.local
+++ b/e-commerce-frontend/.env.local
@@ -1,10 +1,10 @@
 # Service URLs
-PRODUCT_SERVICE_URL=http://localhost
-AUTH_SERVICE_URL=http://localhost
-CART_SERVICE_URL=http://localhost
-ORDER_SERVICE_URL=http://localhost
-PAYMENT_SERVICE_URL=http://localhost
-ADMIN_SERVICE_URL=http://localhost
+NEXT_PUBLIC_PRODUCT_SERVICE_URL=https://product-service-i3pr.onrender.com
+NEXT_PUBLIC_CART_SERVICE_URL=https://cart-service-g9v1.onrender.com
+NEXT_PUBLIC_PAYMENT_SERVICE_URL=https://payment-service-2bg9.onrender.com
+NEXT_PUBLIC_ORDER_SERVICE_URL=https://order-service-34yt.onrender.com
+NEXT_PUBLIC_AUTH_SERVICE_URL=https://auth-service-v19t.onrender.com
+NEXT_PUBLIC_ADMIN_SERVICE_URL=https://admin-service-553d.onrender.com
 
 # Google OAuth Configuration
 NEXT_PUBLIC_GOOGLE_CLIENT_ID=829203699628-t5h8vm6epgcmessd22t7324ojtk3pohk.apps.googleusercontent.com
